# core

./: .codex.md  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.gigaide/: gigaide.properties
docker/: api.Dockerfile
docker/angie/: angie.conf
docs/: 00_product.md  00_product_philosophy.md  01_principles.md  01_vision.md  02_modules.md  02_user_journeys.md  03_business_processes.md  03_business_processes_rental.md  04_architecture.md  05_mvp.md  06_domain_rules.md  07_user_flows.md  08_identity.md  09_receipts.md  10_inventory.md  11_deployment_bootstrap.md  12_product_documentation.md  13_pricing.md  14_product_identifiers.md  15_ready_for_sale.md  16_labels.md  17_aqsi_publication.md  18_intake_workflow.md  19_operational_visibility.md  domain.md
docs/ai/: AGENTS.md  CONVENTIONS.md  DECISIONS.md  PROMPTS.md  WORKFLOW.md
docs/architecture_review/: 01_module_map.md  02_service_map.md  03_transaction_map.md  04_domain_model.md  05_architecture_backlog.md  06_sprint_08_conformance.md  09_findings.md  (+3 more)
migrations/: env.py  script.py.mako
planning/: backlog.md  current.md  done.md
tests/: conftest.py  test_activity.py  test_app.py  test_aqsi_publication.py  test_auth.py  test_catalog_products.py  test_catalog_variants.py  test_categories.py  test_database.py  test_identity.py  test_intake.py  test_intake_completeness.py  test_intake_sessions.py  test_inventory.py  test_labels.py  test_media.py  test_money.py  test_pricing.py  test_protected_routes.py  test_readiness.py  test_receipt.py  test_rental.py  test_supplier.py  test_worker.py
(+155 files in other folders)
